Flagship UI: templates, JS, manifest, and icon assets

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -371,6 +371,7 @@
   </style>
 
   {% block extra_head %}{% endblock %}
+    {% raw %}<link rel="stylesheet" href="{{ url_for('static', filename='css/ff_patch_index_structural.css') }}">{% endraw %}
 </head>
 
 <body
