chore(gate): restore deterministic prod audit (smoke/hooks/eslint/stylelint/djlint/playwright)

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -603,6 +603,7 @@
   Powered by <strong>FutureFunded</strong>
 </div>
 
+  <script {{ nonce_attr() }} src="{{ url_for('static', filename='js/ff-app.js') }}" defer></script>
 </body>
 </html>
 
